--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Particle Life</title>
-  <script src="dist/main.js" defer></script>
+  <script type="module" src="dist/main.js" defer></script>
 </head>
 
 <body style="color: #ddd; background-color: #333;">
