--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <title>Particle Life</title>
-  <script type="module" src="dist/main.js" defer></script>
+  <link rel="stylesheet" href="style.css">
+  <script type="module" src="dist/main.js"></script>
 </head>
 
-<body style="color: #ddd; background-color: #333;">
+<body>
   <h1>Particle Life</h1>
   <canvas id="main-canvas"></canvas>
 </body>
